added the project

--- a/portfolio/css/styels.css
+++ b/portfolio/css/styels.css
@@ -2,7 +2,7 @@
     font-family: 'Poppins' , sans-serif;
 }
 .banner {
-    background-image: url(/portfolio/PICS/wallpaper...jpg);
+    background-image: url(/portfolio/PICS/614633.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     padding: 300px 0;
